--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Movement section -->
         <div id="section-movement" class="section-container">
             <div class="section-title">
-                Movement <span class="float-right">limited by movement speed</span>
+                Movement or Lack Thereof <span class="float-right">limited by movement speed</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
