--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand" href="index.html">GreatVibes</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -57,7 +57,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>Contact Me</h1>
-            <span class="subheading">Have questions? I have answers.</span>
+            <span class="subheading">Have questions? Maybe I have answers.</span>
           </div>
         </div>
       </div>
@@ -68,10 +68,13 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-        <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
+        <h4>Want to get in touch? </h4>
+        <p>Do you have any suggestions or remarks or anything to say?</p>
+        <p>Drop me mail on scubapetey(at)gmail.com</p>
+  <!--      <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+         Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
         <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
-        <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
+        <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally!
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
@@ -86,14 +89,14 @@
               <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
             </div>
-          </div>
+          </div>-->
         <!--  <div class="control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label>Phone Number</label>
               <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
               <p class="help-block text-danger"></p>
             </div>
-          </div>-->
+          </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Message</label>
@@ -104,7 +107,7 @@
           <br>
           <div id="success"></div>
           <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
-        </form>
+        </form>-->
       </div>
     </div>
   </div>
@@ -142,7 +145,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">Copyright &copy; GreatVibes 2020</p>
         </div>
       </div>
     </div>
