--- a/wineTemplate.html
+++ b/wineTemplate.html
@@ -221,7 +221,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">Copyright &copy; GreatVibes 2020</p>
         </div>
       </div>
     </div>
