--- a/foodTemplate.html
+++ b/foodTemplate.html
@@ -50,7 +50,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/post-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/Food2.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -146,7 +146,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; GreatVibes 2020</p>
+          <p class="copyright text-muted">Copyright &copy; GreatVibes 2021</p>
         </div>
       </div>
     </div>
