--- a/bookTemplate.html
+++ b/bookTemplate.html
@@ -50,7 +50,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/post-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/book1.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
