--- a/bookTemplate.html
+++ b/bookTemplate.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Great Vibes Blog</title>
+  <title>GreatVibes Books</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
