--- a/about.html
+++ b/about.html
@@ -15,8 +15,11 @@
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
+    type='text/css'>
+  <link
+    href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+    rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
   <link href="css/clean-blog.min.css" rel="stylesheet">
@@ -29,7 +32,9 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="index.html">GreatVibes</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
@@ -69,11 +74,15 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <p>I am a science fiction and fantasy story enthusiastic who likes a bit of wine and trying new foods.</p>
-        <p>For the new year, I decided to start cataloging the fun things I read, drink and eat. Opinions are like noses. Everyone has one and mine is now plain to see on the internet.</p>
+        <p>For the new year, I decided to start cataloging the fun things I read, drink and eat. Opinions are like
+          noses. Everyone has one and mine is now plain to see on the internet.</p>
         <strong>Disclaimer:</strong>
-        <p>All views expressed on this site are my own and do not represent the opinions of any entity whatsoever with which I have been, am now, or will be affiliated.</p>
-        <p>That being said, I hope, in all seriousness, that given the theme of my site and my personal philosophy, we can move beyond blame.</p>
-        <p>If you disagree with something, I welcome a discussion. It would be my privilege to learn from what you have to teach me.</p>
+        <p>All views expressed on this site are my own and do not represent the opinions of any entity whatsoever with
+          which I have been, am now, or will be affiliated.</p>
+        <p>That being said, I hope, in all seriousness, that given the theme of my site and my personal philosophy, we
+          can move beyond blame.</p>
+        <p>If you disagree with something, I welcome a discussion. It would be my privilege to learn from what you have
+          to teach me.</p>
       </div>
     </div>
   </div>
@@ -94,7 +103,7 @@
                 </span>
               </a>
             </li>
-           <!--   <li class="list-inline-item">
+            <!--   <li class="list-inline-item">
               <a href="#">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
