--- a/foodTemplate.html
+++ b/foodTemplate.html
@@ -31,28 +31,38 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Food Review Template</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-        aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="index.html">GreatVibes</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+            aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                        Reviews
+                      </a>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" href="books.html">Books</a>
+                        <a class="dropdown-item" href="wines.html">Wine</a>
+                        <a class="dropdown-item" href="food.html">Food</a>
+                      </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
 
   <!-- Page Header -->
   <header class="masthead" style="background-image: url('img/Food2.jpg')">
@@ -77,66 +87,40 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a
-            globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which
-            there is no center because every point, or none, is center — an equal earth which all men occupy as equals.
-            The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
+          <h3> The Open House Polo Restaurant</h3>
 
-          <p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning
-            back from science. The early warnings about technological dangers also come from science.</p>
+          <h5>(Name/location)</h5>
+          <p>The ‘Open House’ is a restaurant situated in the heart of a small village between three national forests
+            and close to the horse´s capital city, Chantilly. It is the favourite hangout place for people from the
+            polo, horse races, and golf world.</p>
 
-          <p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set
-            eye on the earth.</p>
+          <h5> (Atmosphere/decor)</h5>
+          <p>As you enter the place you are welcomed by a magnificent setting, a delightful marriage of antique cut
+            stones and the luxuries of modernity. Sitting in any table you have a wonderful view of the workshop-like
+            kitchen where you can see the chefs working. For those who do not book a table and are waiting, there is a
+            cosy lounge with aged leather armchairs and pictures of polo players displayed on the walls. </p>
 
-          <p>A Chinese tale tells of some men sent to harm a young girl who, upon seeing her beauty, become her
-            protectors rather than her violators. That's how I felt seeing the Earth for the first time. I could not
-            help but love and cherish her.</p>
+          <h5>(The menu/dishes)</h5>
+          <p>The menu offers a wide variety of mouth-watering starters. I had the white asparagus accompanied by a
+            mousseline sauce and poached eggs, while my friend tried the zucchini carpaccio served with sundries
+            tomatoes and a mozzarella strudel. They were exquisite. The main course consisted in a risotto with scallop
+            cooked in cream and a cassolette of coley with mussels, which really thrilled us. It all was followed by a
+            delicious apple pie served with a scoop of vanilla ice cream for dessert. </p>
 
-          <p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more who will, the
-            experience most certainly changes your perspective. The things that we share in our world are far more
-            valuable than those which divide us.</p>
+          <h5>(The ingredients/the wine/the prices)</h5>
+          <p>All the products were fresh and the dishes had the warmth of home-made food. The chefs takes great care in
+            selecting the best quality ingredients. The restaurant also caters for all tastes by providing a large
+            selection of the best wines of the region, which are pricy but worth sampling.</p>
 
-          <h2 class="section-heading">The Final Frontier</h2>
+          <h5>(The service/the waiters/the owner)</h5>
+          <p> What a pity that the service does not accompany the high quality of the cooking. You can hardly get a
+            smile out of the waitresses. Thankfully the owner and hostess, a middle-aged charming woman, is always
+            around willing to exchange some kind words with all her clients.</p>
 
-          <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a
-            task to occupy the generations. And no matter how much progress one makes, there is always the thrill of
-            just beginning.</p>
-
-          <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a
-            task to occupy the generations. And no matter how much progress one makes, there is always the thrill of
-            just beginning.</p>
-
-          <blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of tomorrow.
-            Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the
-            next ten.</blockquote>
-
-          <p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a
-            historical process which mankind is carrying out in accordance with the natural laws of human development.
-          </p>
-
-          <h2 class="section-heading">Reaching for the Stars</h2>
-
-          <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a
-            marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so
-            delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a
-            man.</p>
-
-          <a href="#">
-            <img class="img-fluid" src="img/post-sample-image.jpg" alt="">
-          </a>
-          <span class="caption text-muted">To go places and do things that have never been done before – that’s what
-            living is all about.</span>
-
-          <p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to
-            explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone
-            before.</p>
-
-          <p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth
-            to our nature, Man must explore, and this is exploration at its greatest.</p>
-
-          <p>Placeholder text by
-            <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
-            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
+          <h5>(Recommendation)</h5>
+          <p>Despite the high price of the food and the not so attentive waiters´ service, I had a pleasant dining
+            experience with food of the most exquisite flavours. For this reason I highly recommend going to the Open
+            House restaurant.</p>
         </div>
       </div>
     </div>
