--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <!-- Custom styles for this template -->
 
     <link href="css/clean-blog.min.css" rel="stylesheet">
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
@@ -49,12 +49,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                             Reviews
-                          </a>
-                          <div class="dropdown-menu">
+                        </a>
+                        <div class="dropdown-menu">
                             <a class="dropdown-item" href="books.html">Books</a>
                             <a class="dropdown-item" href="wines.html">Wine</a>
                             <a class="dropdown-item" href="food.html">Food</a>
-                          </div>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -174,6 +174,30 @@
             });
         });
     </script>
+    <script>
+        //Get the button
+        var mybutton = document.getElementById("myBtn");
+
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () {
+            scrollFunction()
+        };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+    </script>
+
     <!-- Custom scripts for this template -->
     <script src="js/clean-blog.min.js"></script>
 
