--- a/bookTemplate.html
+++ b/bookTemplate.html
@@ -191,6 +191,7 @@
         </div>
       </div>
     </div>
+    <a id="back2Top" title="Back to top" href="#">&#10148;</a>
   </footer>
 
   <!-- Bootstrap core JavaScript -->
