--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
 
     <link href="css/clean-blog.min.css" rel="stylesheet">
 
+    <link href="css/clean-blog.css" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    
+
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
@@ -158,25 +160,14 @@
                 </div>
             </div>
         </div>
+        <a id="back2Top" title="Back to top" href="#">&#10148;</a>
     </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <script>
-        $(document).ready(function () {
-            $("#myInput").on("keyup", function () {
-                var value = $(this).val().toLowerCase();
-                $("#myDIV *").filter(function () {
-                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-                });
-            });
-        });
-    </script>
-    <script>
-     
-    </script>
+ 
 
     <!-- Custom scripts for this template -->
     <script src="js/clean-blog.min.js"></script>
