--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 
   <title>GreatVibes Contact</title>
 
+ 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -22,8 +23,13 @@
     rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
+
   <link href="css/clean-blog.min.css" rel="stylesheet">
 
+  <link href="css/clean-blog.css" rel="stylesheet">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
