fix spelling mistake on about page

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>I am a science fiction and fantasy story enthusiastic who likes a bit of wine and trying new foods.</p>
+        <p>I am a science fiction and fantasy story enthusiast who likes a bit of wine and trying new foods.</p>
         <p>For the new year, I decided to start cataloging the fun things I read, drink and eat. Opinions are like
           noses. Everyone has one and mine is now plain to see on the internet.</p>
         <strong>Disclaimer:</strong>
