spelling mistake fixed

--- a/wineFlagstonePoetry2019Merlot.html
+++ b/wineFlagstonePoetry2019Merlot.html
@@ -136,7 +136,7 @@
           </p>
           <p>Body: Medium to Full
           </p>
-          <p>Alcohol: 13.96
+          <p>Alcohol: 13.96%
           </p>
           <p>Texture: smooth, soft, and mellow
           </p>
