--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
                             Reviews
                         </a>
                         <div class="dropdown-menu">
-                          <a class="dropdown-item" href="books.html">Books</a>
-                            
-                          <!--    <a class="dropdown-item" href="food.html">Food</a>-->
+                            <a class="dropdown-item" href="books.html">Books</a>
+                            <a class="dropdown-item" href="food.html">Food</a>
                             <a class="dropdown-item" href="wines.html">Wine</a>
                         </div>
                     </li>
