--- a/index.html
+++ b/index.html
@@ -123,28 +123,8 @@
     <hr>
 
     <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-md-10 mx-auto">
-                    <ul class="list-inline text-center">
-                        <li class="list-inline-item">
-                            <a href="#">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fas fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-
-                    </ul>
-                    <p class="copyright text-muted">Copyright &copy; GreatVibes 2021</p>
-                </div>
-            </div>
-        </div>
-        <a id="back2Top" title="Back to top" href="#">&#10148;</a>
-    </footer>
-
+    <div id="unifooter"></div>
+    
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
