--- a/editor.html
+++ b/editor.html
@@ -56,3 +56,9 @@
      </div>
      <a id="back2Top" title="Back to top" href="#">&#10148;</a>
  </footer>
+ <a href="#">
+     <span class="fa-stack fa-lg">
+         <i class="fas fa-circle fa-stack-2x"></i>
+         <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+     </span>
+ </a>
