--- a/editor.html
+++ b/editor.html
@@ -30,7 +30,7 @@
                              href="mailto:?Subject=Greatvibes.co.za&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://www.greatvibes.co.za">
                              <span class="fa-stack fa-lg">
                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-email fa-stack-1x fa-inverse"></i>
+                                <i class="fab fa-envelope fa-stack-1x fa-inverse"></i>
                             </span>
                          </a>
                      </li>
