custom footer fix

--- a/wineFlagstonePoetry2019Merlot.html
+++ b/wineFlagstonePoetry2019Merlot.html
@@ -118,13 +118,20 @@
       </div>
     </div>
   </article>
+  <!--Sharing buttons-->
+  <hr>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
+        <br>
+        <h6 style="justify-content: center;">Share with your friends if you want to or don't, I'm not the boss of you:
+        </h6>
+        <br>
         <ul class="list-inline text-center" id="share-buttons">
           <li class="list-inline-item">
             <!-- Facebook -->
-            <a href="http://www.facebook.com/sharer.php?u=https://www.greatvibes.co.za/wineflagstonepoetry2019merlot" target="_blank">
+            <a href="http://www.facebook.com/sharer.php?u=https://www.greatvibes.co.za/wineflagstonepoetry2019merlot"
+              target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
@@ -141,7 +148,6 @@
                 <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
               </span>
             </a>
-
           </li>
           <li class="list-inline-item">
             <!-- Email -->
@@ -155,13 +161,13 @@
           </li>
           <li class="list-inline-item">
             <!-- Reddit -->
-            <a href="http://reddit.com/submit?url=https://www.greatvibes.co.za/wineflagstonepoetry2019merlot&amp;title=Great Vibes" target="_blank">
+            <a href="http://reddit.com/submit?url=https://www.greatvibes.co.za/wineflagstonepoetry2019merlot&amp;title=Great Vibes"
+              target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-reddit fa-stack-1x fa-inverse"></i>
               </span>
             </a>
-
           </li>
           <li class="list-inline-item">
             <!-- LinkedIn -->
@@ -172,7 +178,6 @@
                 <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
               </span>
             </a>
-
           </li>
           <li class="list-inline-item">
             <!-- LinkedIn -->
@@ -183,14 +188,11 @@
                 <i class="fas fa-print fa-stack-1x fa-inverse"></i>
               </span>
             </a>
-
           </li>
-        </ul>       
+        </ul>
       </div>
     </div>
   </div>
-  <hr>
-
   <!-- Footer -->
   <footer>
     <div class="container">
