--- a/wines.html
+++ b/wines.html
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <div class="site-heading">
-                        <h1>The Great Vibes Blog</h1>
+                        <h1>The Great Vibes</h1>
                         <span class="subheading">These are all the wine reviews on the blog</span>
                     </div>
                 </div>
