--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         <p>I am a science fiction and fantasy story enthusiast who likes a bit of wine and trying new foods.</p>
         <p>For the new year, I decided to start cataloging the fun things I read, drink and eat. Opinions are like
-          noses. Everyone has one and mine is now plain to see on the internet.</p>
+          butts. Everyone has one and mine is now plain to see on the internet.</p>
         <strong>Disclaimer:</strong>
         <p>All views expressed on this site are my own and do not represent the opinions of any entity whatsoever with
           which I have been, am now, or will be affiliated.</p>
