updated footer in templates

--- a/wineTemplate.html
+++ b/wineTemplate.html
@@ -173,10 +173,92 @@
     </div>
   </article>
 
-  <hr>
-
-  <!-- Footer -->
-  <div id="unifooter"></div>
+   <!--Sharing buttons-->
+   <hr>
+   <div class="container">
+     <div class="row">
+       <div class="col-lg-8 col-md-10 mx-auto">
+         <br>
+         <h6 style="justify-content: center;">Share with your friends if you want to or don't, I'm not the boss of you:
+         </h6>
+         <br>
+         <ul class="list-inline text-center" id="share-buttons">
+           <li class="list-inline-item">
+             <!-- Facebook -->
+             <a href="http://www.facebook.com/sharer.php?u=https://www.greatvibes.co.za/wineflagstonepoetry2019merlot"
+               target="_blank">
+               <span class="fa-stack fa-lg">
+                 <i class="fas fa-circle fa-stack-2x"></i>
+                 <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
+               </span>
+             </a>
+           </li>
+           <li class="list-inline-item">
+ 
+             <!-- Twitter -->
+             <a href="https://twitter.com/share?url=https://www.greatvibes.co.za/wineflagstonepoetry2019merlot&amp;text=Great%20Vibes&amp;hashtags=greatvibes"
+               target="_blank">
+               <span class="fa-stack fa-lg">
+                 <i class="fas fa-circle fa-stack-2x"></i>
+                 <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+               </span>
+             </a>
+           </li>
+           <li class="list-inline-item">
+             <!-- Email -->
+             <a
+               href="mailto:?Subject=Greatvibes.co.za&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://www.greatvibes.co.za/wineflagstonepoetry2019merlot">
+               <span class="fa-stack fa-lg">
+                 <i class="fas fa-circle fa-stack-2x"></i>
+                 <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
+               </span>
+             </a>
+           </li>
+           <li class="list-inline-item">
+             <!-- Reddit -->
+             <a href="http://reddit.com/submit?url=https://www.greatvibes.co.za/wineflagstonepoetry2019merlot&amp;title=Great Vibes"
+               target="_blank">
+               <span class="fa-stack fa-lg">
+                 <i class="fas fa-circle fa-stack-2x"></i>
+                 <i class="fab fa-reddit fa-stack-1x fa-inverse"></i>
+               </span>
+             </a>
+           </li>
+           <li class="list-inline-item">
+             <!-- LinkedIn -->
+             <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://www.greatvibes.co.za/wineflagstonepoetry2019merlot"
+               target="_blank">
+               <span class="fa-stack fa-lg">
+                 <i class="fas fa-circle fa-stack-2x"></i>
+                 <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+               </span>
+             </a>
+           </li>
+           <li class="list-inline-item">
+             <!-- LinkedIn -->
+             <!-- Print -->
+             <a href="javascript:;" onclick="window.print()">
+               <span class="fa-stack fa-lg">
+                 <i class="fas fa-circle fa-stack-2x"></i>
+                 <i class="fas fa-print fa-stack-1x fa-inverse"></i>
+               </span>
+             </a>
+           </li>
+         </ul>
+       </div>
+     </div>
+   </div>
+   <!-- Footer -->
+   <footer>
+     <div class="container">
+       <div class="row">
+         <div class="col-lg-8 col-md-10 mx-auto">
+           <p class="copyright text-muted">Copyright &copy; GreatVibes.co.za 2021</p>
+         </div>
+       </div>
+     </div>
+     <a id="back2Top" title="Back to top" href="#">&#10148;</a>
+   </footer>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
