--- a/wineBlindTasting2018.html
+++ b/wineBlindTasting2018.html
@@ -74,7 +74,7 @@
             and Bravo Design.
           </p>
           <p>All funds generated through this project will be channelled towards the care and support of visually and
-            additionally impaired adults cared for by Innovation for the Blind. 2018 alone 2250 bottles was old and the
+            additionally impaired adults cared for by Innovation for the Blind. In 2018 alone 2250 bottles was sold and the
             funds donated.
             <p>The label is a beautiful black with gold embossed words and filigree. The result is eye catching and bold
               and looks good on display.
@@ -82,22 +82,24 @@
           </p>
           <p><a href="https://bravodesign.co.za/portfolios/the-blind-tasting/" target="_blank">Source</a>
           </p>
-          <p>And then Braille embossed on the label are the words Sight, Hearing, Touch, Smell, Taste, and below the
-            name Red Blend.
+          <p>Then in Braille embossed on the label are the words Sight, Hearing, Touch, Smell, Taste, and below the
+            name Red Blend. (Took me a little while to translate this using <a href="https://brailletranslator.net/"
+            target="_blank">Brailletranslator.net</a>)
           </p>
           <p>It really is a stunning label which was designed by <a href="https://bravodesign.co.za/about-us/"
-              target="_blank">Bravo Design</a> which is a is a medium size company based in Cape Town, South Africa with
-            over 14 years’ experience in packaging design.
+              target="_blank">Bravo Design</a> which is a is a medium size Design company based in Cape Town, South Africa with
+            over 14 years’ experience in packaging design quite a few fancy and impressive designs in their portfolio.
           </p>
+          <p>But I digress...</p>
           <p>The wine itself is an intensely deep ruby color as expected from a blend of Shiraz and Cabernet and looks
             very appetizing. The tears form and run down quickly on the sides of the glass. Overall, very appealing to
             the eye.
           </p>
-          <p>The flavor you get upon pouring a glass and letting it rest for a minute or two, is heavy wooded oak. Then
+          <p>The flavor you get when pouring a glass and letting it rest for a minute or two, is heavy wooded oak. Then
             there comes a through ah lovely berry or black fruit aroma. More specifically a hint of cherry. There is a
             layered level with a touch of cinnamon but exceptionally light and complimentary.
           </p>
-          <p>A complex but accented palette that is quite cheeky but quite enjoyable.
+          <p>A complex but accented palette that is quite cheeky but very enjoyable.
           </p>
           <p>The structure is a bit on the acidic side but not overwhelming. Alcohol is at 14%. Tannins are at a
             enjoyable level and the wine is not too bitter but will go well with a nice ribeye steak or a karoo lamb
