--- a/wineBlindTasting2018.html
+++ b/wineBlindTasting2018.html
@@ -111,7 +111,7 @@
             evening with friends or new acquaintances.
           </p>
           <p>I cannot find the wine on sale anywhere on the internet but if you are interested in acquiring a bottle or
-            6 you can send an email to <email href="blindtastingred@kaleidoscope.org">blindtastingred@kaleidoscope.org</email> (No commission or payment earned
+            6 you can send an email to <a href="blindtastingred@kaleidoscope.org">blindtastingred@kaleidoscope.org</a> (No commission or payment earned
             for this referral. Just connecting people with good wine and great vibes)
           </p>
         </div>
