--- a/wineBlindTasting2018.html
+++ b/wineBlindTasting2018.html
@@ -87,8 +87,8 @@
             target="_blank">Brailletranslator.net</a>)
           </p>
           <p>It really is a stunning label which was designed by <a href="https://bravodesign.co.za/about-us/"
-              target="_blank">Bravo Design</a> which is a is a medium size Design company based in Cape Town, South Africa with
-            over 14 years’ experience in packaging design quite a few fancy and impressive designs in their portfolio.
+              target="_blank">Bravo Design</a> which is a medium size Design company based in Cape Town, South Africa with
+            over 14 years’ experience in packaging design, quite a few fancy and impressive designs in their portfolio.
           </p>
           <p>But I digress...</p>
           <p>The wine itself is an intensely deep ruby color as expected from a blend of Shiraz and Cabernet and looks
@@ -96,7 +96,7 @@
             the eye.
           </p>
           <p>The flavor you get when pouring a glass and letting it rest for a minute or two, is heavy wooded oak. Then
-            there comes a through ah lovely berry or black fruit aroma. More specifically a hint of cherry. There is a
+            there comes through a lovely berry or black fruit aroma. More specifically a hint of cherry. There is a
             layered level with a touch of cinnamon but exceptionally light and complimentary.
           </p>
           <p>A complex but accented palette that is quite cheeky but very enjoyable.
