--- a/wineBlindTasting2018.html
+++ b/wineBlindTasting2018.html
@@ -69,14 +69,17 @@
             to close their eyes and open their minds to experience it as the blind would.”
           </p>
           <p>They wanted you to test your senses – taste, smell and what you think you know about wine, in support of
-            the blind. Their theory is that by removing one of your senses, sight, which is your most active sense, you might
+            the blind. Their theory is that by removing one of your senses, sight, which is your most active sense, you
+            might
             just experience the world in a different way. This is a unique concept in partnership with Kaleidoscope, KWV
             and Bravo Design.
           </p>
           <p>All funds generated through this project will be channelled towards the care and support of visually and
-            additionally impaired adults cared for by Innovation for the Blind. In 2018 alone 2250 bottles were sold and the
+            additionally impaired adults cared for by Innovation for the Blind. In 2018 alone 2250 bottles were sold and
+            the
             funds donated.
-            <p>The label is a beautiful black design with gold embossed words and filigree. The result is eye catching, bold,
+            <p>The label is a beautiful black design with gold embossed words and filigree. The result is eye catching,
+              bold,
               and looks good on display.
             </p> <img src="img/BlindTasting2018.jpg" alt="Blind Tasting Red Blend 2018" width="240" height="379">
           </p>
@@ -84,10 +87,11 @@
           </p>
           <p>Then in Braille embossed on the label are the words Sight, Hearing, Touch, Smell, Taste, and below the
             name Red Blend. (Took me a little while to translate this using <a href="https://brailletranslator.net/"
-            target="_blank">Brailletranslator.net</a>)
+              target="_blank">Brailletranslator.net</a>)
           </p>
           <p>It really is a stunning label which was designed by <a href="https://bravodesign.co.za/about-us/"
-              target="_blank">Bravo Design</a> which is a medium size Design company based in Cape Town, South Africa with
+              target="_blank">Bravo Design</a> which is a medium size Design company based in Cape Town, South Africa
+            with
             over 14 years’ experience in packaging design, quite a few fancy and impressive designs in their portfolio.
           </p>
           <p>But I digress...</p>
@@ -111,7 +115,9 @@
             evening with friends or new acquaintances.
           </p>
           <p>I cannot find the wine on sale anywhere on the internet but if you are interested in acquiring a bottle or
-            6 you can send an email to <a href="blindtastingred@kaleidoscope.org">blindtastingred@kaleidoscope.org</a> (No commission or payment earned
+            6 you can send an email to <a
+              href="mailto:blindtastingred@kaleidoscope.org">blindtastingred@kaleidoscope.org</a> (No commission or
+            payment earned
             for this referral. Just connecting people with good wine and great vibes)
           </p>
         </div>
@@ -124,7 +130,7 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <br>
-        <h6 style="justify-content: center;">Share with your friends if you want to or don't, I'm not the boss of you:
+        <h6 style="text-align: center;">Share with your friends if you want to or don't, I'm not the boss of you:
         </h6>
         <br>
         <ul class="list-inline text-center" id="share-buttons">
@@ -150,16 +156,6 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <!-- Email -->
-            <a
-              href="mailto:?Subject=Greatvibes.co.za&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://www.greatvibes.co.za/wineBlindTasting2018">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
             <!-- Reddit -->
             <a href="http://reddit.com/submit?url=https://www.greatvibes.co.za/wineBlindTasting2018&amp;title=Great Vibes"
               target="_blank">
@@ -170,25 +166,17 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <!-- LinkedIn -->
-            <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://www.greatvibes.co.za/wineBlindTasting2018"
-              target="_blank">
+            <!-- Email -->
+            <a
+              href="mailto:?Subject=Greatvibes.co.za&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://www.greatvibes.co.za/wineBlindTasting2018">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
-            <!-- LinkedIn -->
-            <!-- Print -->
-            <a href="javascript:;" onclick="window.print()">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fas fa-print fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
+
+
         </ul>
       </div>
     </div>
