--- a/wineFlagstonePoetry2019Merlot.html
+++ b/wineFlagstonePoetry2019Merlot.html
@@ -109,7 +109,7 @@
           </p>
           <p>As mentioned before the medium dryness and woodiness come out in the aftertaste and is quite pleasant
             leaving you with a want for more.</p>
-            <p> A great wine to give as a gift to people you like to show appreciation or even people you don’t like as
+          <p> A great wine to give as a gift to people you like to show appreciation or even people you don’t like as
             you’ll forever have them drinking their cheap wines with longing regret after having tasted this delectable
             and enjoyable red seductress.
           </p>
@@ -127,7 +127,7 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <br>
-        <h6 style="justify-content: center;">Share with your friends if you want to or don't, I'm not the boss of you:
+        <h6 style="text-align: center;">Share with your friends if you want to or don't, I'm not the boss of you:
         </h6>
         <br>
         <ul class="list-inline text-center" id="share-buttons">
@@ -152,16 +152,7 @@
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
-            <!-- Email -->
-            <a
-              href="mailto:?Subject=Greatvibes.co.za&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://www.greatvibes.co.za/wineflagstonepoetry2019merlot">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
+         
           <li class="list-inline-item">
             <!-- Reddit -->
             <a href="http://reddit.com/submit?url=https://www.greatvibes.co.za/wineflagstonepoetry2019merlot&amp;title=Great Vibes"
@@ -173,22 +164,12 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <!-- LinkedIn -->
-            <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://www.greatvibes.co.za/wineflagstonepoetry2019merlot"
-              target="_blank">
+            <!-- Email -->
+            <a
+              href="mailto:?Subject=Greatvibes.co.za&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://www.greatvibes.co.za/wineflagstonepoetry2019merlot">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <!-- LinkedIn -->
-            <!-- Print -->
-            <a href="javascript:;" onclick="window.print()">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fas fa-print fa-stack-1x fa-inverse"></i>
+                <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
